# pathops

./: .gitignore  Cargo.toml  GPT_N_POLICY.md  README.md
src/: boolean.rs  clear.rs  create_bezier.rs  fit_to_points.rs  main.rs  refigure.rs  simplify.rs  validators.rs
src/bin_subcommands/: boolean.rs  clear.rs  fit.rs  mod.rs  nudge.rs  refigure.rs
